# slap

./: Cargo.toml  README.md
src/: cli.rs  lsp.rs  main.rs
src/detectors/: ai_sec.rs  mod.rs  structs.rs
