[package]
name = "slap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
log = "0.4.22"
log4rs = "1.3.0"
notify = "7.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
slang_solidity = "0.18.3"
semver = "1.0.23"
